@@ -1,3 +1,9 @@
+9/30/2006 - jdiamond
+====================
+
+ * (trac #121) Fixed a bug that was showing a "invoice not found" error whenever you
+               canceled out of editing a payment from the View Order page.
+
 9/29/2006 - jdiamond
 ====================
 
